[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nitro-generator-checker"
version = "0.0.0"
license = { text = "MIT" }
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
requires-python = ">=3.8"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  "aiofiles",
  "aiohttp>=3.8.6,<4",
  "aiohttp-socks>=0.7,<0.10",
  "brotli>=1,<2; implementation_name=='cpython'",
  "brotlicffi<2; implementation_name!='cpython'",
  "certifi",
  "charset-normalizer>=2,<4",
  "rich>=10.2,<14",
  "tomli<3; python_version<'3.11'",
  "typing-extensions>=4.4,<5; python_version<'3.12'",
  "winloop<0.1.7; implementation_name=='cpython' and (sys_platform=='cygwin' or sys_platform=='win32')",
]
optional-dependencies.non-termux = [
  "aiodns>=1.1,<4",
  "uvloop>=0.14,<0.21; implementation_name=='cpython' and (sys_platform=='darwin' or sys_platform=='linux')",
]
optional-dependencies.nuitka = ["nuitka==2.4.8"]
urls.repository = "https://github.com/monosans/nitro-generator-checker"

[tool.uv]
dev-dependencies = [
  "mypy==1.11.2",
  "ruff==0.6.8",
  "tomli==2.0.2",
  "types-aiofiles==24.1.0.20240626",
  "typing-extensions==4.12.2",
]
